# crm_system

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build-image.yml  nightly.yml  rust.yml
migrations/: 20240715140025_create_sys_table.down.sql  20240715140025_create_sys_table.up.sql  20240715140120_add_sys_seed.down.sql  20240715140120_add_sys_seed.up.sql  20240715140736_create_user_table.up.sql  20240718130704_create_plan_table.down.sql  20240718130704_create_plan_table.up.sql  20240719024745_create_subscription_table.down.sql  20240719024745_create_subscription_table.up.sql  20240719024934_create_payment_table.up.sql  20240808051325_create_permission_table.up.sql  20240808051530_create_role_table.down.sql  20240808051530_create_role_table.up.sql  20240808051633_create_role_permission_table.up.sql  20240808052029_create_user_role_table.up.sql  20240808052659_add_role_seed.up.sql  20240808052911_create_user_group_table.down.sql  20240808052911_create_user_group_table.up.sql  20240808054330_add_resource_table.up.sql  20240819100713_create_token_table.down.sql  20240819100713_create_token_table.up.sql
scripts/: init_db.sh
src/: app.rs  db.rs  main.rs  router.rs
src/apps/: app.rs  mod.rs
src/configs/: keys.rs
src/domain/: mod.rs
src/dtos/: resource_dtos.rs
src/handlers/: health.rs  mod.rs  payment.rs  permissions.rs  plans.rs  resources.rs  roles.rs  subscriptions.rs  sys.rs  users.rs
src/infra/: configs.rs  keys.rs  mod.rs
src/middlewares/: auth.rs  create_role.rs  mod.rs  sys.rs
src/models/: mod.rs  role_model.rs  user_model.rs  (+2 more)
(+70 files in other folders)
